# mini-pinball-machine

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build_mac.sh  build_rpi.sh  config.txt  constants.c  gameStruct.h  game_mac  gameobjects.py  inputManager.h  inputManagerMac.c  inputManagerPi.c  main.c  main.py  main_mac  physicsDebugDraw.c  run_rpi.sh  scores.c  scores.h  scores.py  soundManager.c  soundManager.h  testInputPi.c
Resources/: scores.db
Resources/Shaders/glsl330/: alphaTest.fs
Resources/Textures/: Untitled.afdesign  background2.afdesign  ball.afdesign  bumper.afdesign  flipperTrail.afdesign  gameOverOverlay1.afdesign  lowerBumperShock.afdesign  menuControls.afdesign  menuOverlay1.afdesign  titleOverlay.afdesign  trail.afdesign
lib/raylib_mac/: raylib.h
resources/assets/Shaders/glsl100/: alphaTest.fs
resources/assets/Shaders/glsl120/: alphaTest.fs
resources/assets/Textures/: arrowRight.afdesign  bgMenu.afdesign  bumper3.afdesign  flipper.afdesign  gameOverOverlay1.afdesign  iceOverlay.afdesign  menuControls.afdesign  shockwave.afdesign  trail.afdesign
resources/rpi/: wpa_supplicant.conf
scripts/: build_rpi.sh
src/: constants.h  gameStruct.c  inputManager.h  inputManagerMac.c  inputManagerPi.c  main.c  physicsDebugDraw.h  scores.c  soundManager.c
